# AIMoneyTracker

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  pyrightconfig.json  sqlc.yaml
src/: controller.py  currencies.py  dtos.py  env.py  exceptions.py  main.py  misc.py  requesters.py  service.py  tutorial.py
src/db/: manager.py  models.py  queries.py  queries.sql
src/db/migrations/: 20250302194903_create_users_table.sql  20250421000000_add_updated_at_to_rate.sql  20250428000000_add_fields_to_transaction.sql  20250501000000_add_unique_constraint_to_category_name.sql  20250501114642_make_transaction_fields_not_nullable.sql  20250502000000_add_original_transaction_id_field.sql  20250503000000_remove_user_tg_id.sql  20250503163755_remove_original_transaction_id_field.sql
src/services/categories/: service.py
src/services/rates/: requesters.py  service.py
src/services/transactions/: service.py
src/worker/: broker.py  tasks.py
src/worker/rates/: interactor.py  requesters.py
tests/: conftest.py  pytest.ini  test_account.py  test_categories.py  test_categories_service.py  test_create_transactions.py  test_edit_transaction.py  test_rates_interactor.py  test_rates_service.py  test_service.py  test_transactions.py  test_user_service.py
